Ajout parcours carte séjour temporaire étudiant

--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -13,6 +13,7 @@ email.activation.text=Your sejour account has been created, please click on the 
 email.payment.title=Confirmation du d\u00e9p\u00f4t de votre demande
 email.payment.greeting=Bonjour {0} {1},
 email.payment.done.sejour_etudiant=Nous accusons r\u00e9ception de votre demande de s\u00e9jour \u00e9tudiant, n\u00B0{0}, d\u00e9pos\u00e9e et r\u00e9gl\u00e9e en ligne le {1} \u00e0 {2}.
+email.payment.done.sejour_tmp_etudiant=Nous accusons r\u00e9ception de votre demande de carte de s\u00e9jour temporaire \u00e9tudiant, n\u00B0{0}, d\u00e9pos\u00e9e et r\u00e9gl\u00e9e en ligne le {1} \u00e0 {2}.
 email.payment.done.naturalisation=Nous accusons r\u00e9ception de votre demande de naturalisation, n\u00B0{0}, d\u00e9pos\u00e9e et r\u00e9gl\u00e9e en ligne le {1} \u00e0 {2}.
 email.payment.admissible=La recevabilit\u00e9 de votre dossier va \u00eatre v\u00e9rifi\u00e9e par l\u2019Administration des \u00e9trangers en France. Si votre dossier est recevable, nous vous enverrons une notification de confirmation vous invitant \u00e0 finaliser le d\u00e9p\u00f4t de votre demande.
 email.payment.inadmissible=Si votre dossier n\u2019est pas recevable, nous vous en indiquerons les raisons et vous pr\u00e9ciserons le(s) \u00e9l\u00e9ment(s) manquant(s) le cas \u00e9ch\u00e9ant.
@@ -20,6 +21,7 @@ email.payment.inadmissible=Si votre dossier n\u2019est pas recevable, nous vous 
 email.admissibility.title=Validation de la recevabilit\u00e9 de votre demande
 email.admissibility.greeting=Bonjour {0} {1},
 email.admissibility.ok.sejour_etudiant=Votre demande de s\u00e9jour \u00e9tudiant, n\u00B0{0}, a \u00e9t\u00e9 jug\u00e9e recevable.
+email.admissibility.ok.sejour_tmp_etudiant=Votre demande de carte de s\u00e9jour temporaire \u00e9tudiant, n\u00B0{0}, a \u00e9t\u00e9 jug\u00e9e recevable.
 email.admissibility.ok.naturalisation=Votre demande de naturalisation, n\u00B0{0}, a \u00e9t\u00e9 jug\u00e9e recevable.
 email.admissibility.ok.renewal=Votre demande de s\u00e9jour \u00e9tudiant a \u00e9t\u00e9 jug\u00e9e recevable. Nous vous recontacterons d\u00e8s que celle-ci aura \u00e9t\u00e9 instruite.
 email.admissibility.rdv=Pour finaliser le d\u00e9p\u00f4t de votre demande, nous vous invitons d\u00e8s \u00e0 pr\u00e9sent \u00e0 prendre rendez-vous en cliquant sur le lien ci-dessous :
@@ -29,12 +31,16 @@ email.rdv.title=Confirmation de votre rendez-vous
 email.rdv.greeting=Bonjour {0} {1},
 email.rdv.confirmed=Nous vous confirmons votre rendez-vous le {0} \u00e0 {1} \u00e0 l\u2019adresse ci-dessous. Merci de vous pr\u00e9senter \u00e0 l\u2019accueil \u00e0 l\u2019heure dite, muni de votre passeport et de vos documents d\u2019\u00e9tat-civil originaux.
 email.rdv.name.sejour_etudiant=Ambassade de France \u00e0 S\u00e9oul
+email.rdv.name.sejour_tmp_etudiant=Pr\u00e9fecture de police de Paris
 email.rdv.name.naturalisation=Pr\u00e9fecture de Seine-Saint-Denis - Bureau des naturalisations
 email.rdv.street.sejour_etudiant=43-12 Seosomun-ro,
+email.rdv.street.sejour_tmp_etudiant=1 rue de Lut\u00e8ce,
 email.rdv.street.naturalisation=1 Esplanade Jean Moulin,
 email.rdv.city.sejour_etudiant=SEOUL 03741 (120-030)
+email.rdv.city.sejour_tmp_etudiant=75004 Paris
 email.rdv.city.naturalisation=93007 Bobigny
 email.rdv.phone.sejour_etudiant=T\u00e9l  : (82-2) 3149 4300
+email.rdv.phone.sejour_tmp_etudiant=T\u00e9l  : +33 1 53 71 53 71
 email.rdv.phone.naturalisation=T\u00e9l  : +33 1 41 60 60 60
 email.rdv.delay=Vous pouvez modifier \u00e0 votre convenance votre cr\u00e9neau de rendez-vous dans un d\u00e9lai de 1 jour avant le rendez-vous confirm\u00e9. Pass\u00e9 ce d\u00e9lai, un justificatif vous sera demand\u00e9 pour modifier ou annuler votre rendez-vous. De m\u00eame, toute absence au rendez-vous devra être justifi\u00e9e.
 email.rdv.modifiable=Pour modifier votre rendez-vous, cliquez sur le lien suivant :
@@ -43,6 +49,7 @@ email.rdv.link=Modifier mon rendez-vous
 email.decision.title=D\u00e9cision favorable
 email.decision.greeting=Bonjour {0} {1},
 email.decision.ok.sejour_etudiant=Votre demande de s\u00e9jour \u00e9tudiant, n\u00B0{0}, a \u00e9t\u00e9 accept\u00e9e.
+email.decision.ok.sejour_tmp_etudiant=Votre demande de carte de s\u00e9jour temporaire \u00e9tudiant, n\u00B0{0}, a \u00e9t\u00e9 accept\u00e9e.
 email.decision.ok.naturalisation=Votre demande de naturalisation, n\u00B0{0}, a \u00e9t\u00e9 accept\u00e9e.
 email.decision.permit=Les documents sont en cours de fabrication. Nous vous recontacterons d\u00e8s qu\u2019ils seront disponibles.
 
@@ -74,6 +81,7 @@ email.renewal.end=Si vous ne souhaitez pas renouveler votre titre, nous esp\u00e
 
 email.regards=Regards,
 email.signature.sejour_etudiant=L\u2019\u00e9quipe S\u00e9jour.
+email.signature.sejour_tmp_etudiant=L\u2019\u00e9quipe S\u00e9jour.
 email.signature.naturalisation=L\u2019\u00e9quipe Naturalisation.
 email.signature.administration=Administration des Etrangers en France
 
