--- a/src/main/webapp/i18n/fr/main.json
+++ b/src/main/webapp/i18n/fr/main.json
@@ -12,12 +12,25 @@
     		}
     	},
     	"usager": {
+    		"button": {
+    			"france": "Je suis en France",
+    			"other": "Je suis à l'étranger"
+    		},
+    		"choice": "Où êtes-vous ?",
 	        "title": {
 		        "study": "Je veux <strong>étudier</strong> en France",
 		        "work": "Je veux <strong>travailler</strong> en France",
 		        "family": "Je veux <strong>faire venir ma famille</strong> en France",
 		        "extend": "Je veux <strong>prolonger mon séjour</strong> en France",
-		        "nationality": "Je veux <strong>acquérir la nationalité</strong> française"
+		        "nationality": "Je veux <strong>acquérir la nationalité</strong> française",
+		        "france": {
+		        	"study": "Je veux <strong>demander un premier titre</strong> de séjour",
+		        	"change": "Je veux <strong>déclarer un changement</strong> de situation",
+		        	"family": "Je veux <strong>faire venir ma famille</strong> en France",
+		        	"extend": "Je veux <strong>prolonger mon séjour</strong> en France",
+		        	"sick": "Je veux <strong>bénéficier d'une procédure pour les étrangers malades</strong>",
+		        	"child": "Je veux <strong>demander un document pour mon enfant</strong>"
+		        }
 	        }
 	    },
        	"company": {
@@ -37,7 +50,8 @@
 		        "application": "Gestion des demandes",
 		        "rdv.setting": "Calendrier des rendez-vous",
 		        "question": "Messages",
-		        "analyse": "Analyse des données et pilotage"
+		        "analyse": "Analyse des données et pilotage",
+		        "issuing": "Remise de titre"
 	        }
        	}
     }
