gestion modification formulaire certifié + ajout justificatif domicile

--- a/src/main/webapp/i18n/en/documentType.json
+++ b/src/main/webapp/i18n/en/documentType.json
@@ -5,7 +5,8 @@
             "birthAct": "Birth act",
             "civilStatusAct": "Id act",
             "inscriptionCertificate": "Inscription certificate",
-            "resourceProof": "Resource proof"
+            "resourceProof": "Resource proof",
+            "residency" : "Proof of residency"
         }
     }
 }
