--- a/src/main/webapp/i18n/fr/address.json
+++ b/src/main/webapp/i18n/fr/address.json
@@ -13,7 +13,11 @@
 			"phone": "Téléphone",
 			"email": "Email",
 			"contactType": "Moyen(s) de contact préféré(s)",
-			"contactType.tooltip": "Vous avez la possibilité de choisir un ou plusieurs moyens de contact préférés. Ils seront utilisés pour vous informer sur le déroulement de votre demande."
+			"contactType.tooltip": "Vous avez la possibilité de choisir un ou plusieurs moyens de contact préférés. Ils seront utilisés pour vous informer sur le déroulement de votre demande.",
+            "document.title": "Joignez vos pièces justificatives",
+            "residency": "Justificatif de domicile",
+            "residency.placeholder": "Cliquer ou déposer votre justificatif ici...",
+            "residency.tooltip": "Merci de joindre un de ces documents, datant de moins de 3 mois : facture de gaz, d’électricité ou de téléphone, quittance de loyer, contrat de location, titre de propriété accompagné de l’attestation d’assurance du logement, attestation d’hébergement du logeur et copie de sa carte d’identité ou de séjour et de sa dernière quittance de gaz ou d’électricité,  attestation du responsable ou gérant et facture du dernier mois."
 		}
 	}
 }
