--- a/src/main/webapp/i18n/fr/identity.json
+++ b/src/main/webapp/i18n/fr/identity.json
@@ -2,6 +2,7 @@
 	"identity" : {
 		"form": {
 			"tooltip": "L'état-civil doit correspondre aux informations figurant sur votre passeport",
+			"foreignerNumber": "Numéro d'étranger",
             "lastName": "Nom",
             "usedLastName": "Nom d'usage",
             "firstName": "Prénom(s)",
@@ -29,4 +30,3 @@
 		}
 	}
 }
-
