--- a/src/main/webapp/i18n/en/address.json
+++ b/src/main/webapp/i18n/en/address.json
@@ -13,7 +13,11 @@
 			"phone": "Phone",
 			"email": "Email",
 			"contactType": "Prefered Contact(s)",
-			"contactType.tooltip": "You have the option of choosing one or more preferred contact means. They will be used to inform you about the progress of your application."
+			"contactType.tooltip": "You have the option of choosing one or more preferred contact means. They will be used to inform you about the progress of your application.",
+            "document.title": "Attach your documents",
+            "residency": "Proof of residency",
+            "residency.placeholder": "Click or drag your proof here...",
+            "residency.tooltip": "Merci de joindre un de ces documents, datant de moins de 3 mois : facture de gaz, d’électricité ou de téléphone, quittance de loyer, contrat de location, titre de propriété accompagné de l’attestation d’assurance du logement, attestation d’hébergement du logeur et copie de sa carte d’identité ou de séjour et de sa dernière quittance de gaz ou d’électricité,  attestation du responsable ou gérant et facture du dernier mois."
 		}
 	}
 }
