--- a/src/main/webapp/i18n/fr/documentType.json
+++ b/src/main/webapp/i18n/fr/documentType.json
@@ -5,7 +5,8 @@
             "birthAct": "Acte de naissance",
             "civilStatusAct": "Acte d'état-civil",
             "inscriptionCertificate": "Certificat d'inscription",
-            "resourceProof": "Preuve(s) de ressource"
+            "resourceProof": "Preuve(s) de ressource",
+            "residency": "Justificatif de domicile"
         }
     }
 }
