--- a/src/main/webapp/i18n/en/application.json
+++ b/src/main/webapp/i18n/en/application.json
@@ -28,13 +28,13 @@
 			"payment": "Payment done on {{paymentDate}} - {{userName}}",
 			"admissibility.wait": {
 				"sejour_etudiant": "Waiting for admissibility verification by the french administration of foreigners",
-				"sejour_tmp_etudiant": "Waiting for admissibility verification by the french administration of foreigners",
+				"sejour_tmp_etudiant": "Waiting for admissibility verification",
 				"sejour_salarie": "Waiting for admissibility verification by the french administration of foreigners",
 				"naturalisation": "Waiting for admissibility verification by the french administration of foreigners"
 			},
 			"admissibility": {
 				"sejour_etudiant": "Application admissibility verified on {{admissibilityDate}} by the french administration of foreigners",
-				"sejour_tmp_etudiant": "Application admissibility verified on {{admissibilityDate}} by the french administration of foreigners",
+				"sejour_tmp_etudiant": "Application admissibility verified on {{admissibilityDate}}",
 				"sejour_salarie": "Application admissibility verified on {{admissibilityDate}} by the french administration of foreigners",
 				"naturalisation": "Application admissibility verified on {{admissibilityDate}} by the french administration of foreigners"
 			},
@@ -42,13 +42,13 @@
 			"rdv.passed": "Appointment taken on {{rdvDate}} - {{userName}}",
 			"decision.wait": {
 				"sejour_etudiant": "Waiting for instruction and decision by the french administration of foreigners",
-				"sejour_tmp_etudiant": "Waiting for instruction and decision by the french administration of foreigners",
+				"sejour_tmp_etudiant": "Waiting for instruction and decision",
 				"sejour_salarie": "Waiting for instruction and decision by the french administration of foreigners",
 				"naturalisation": "Waiting for instruction and decision by the french administration of foreigners"
 			},
 			"decision": {
 				"sejour_etudiant": "Instruction and decision validated on {{decisionDate}} by the french administration of foreigners",
-				"sejour_tmp_etudiant": "Instruction and decision validated on {{decisionDate}} by the french administration of foreigners",
+				"sejour_tmp_etudiant": "Instruction and decision validated on {{decisionDate}}",
 				"sejour_salarie": "Instruction and decision validated on {{decisionDate}} by the french administration of foreigners",
 				"naturalisation": "Instruction and decision validated on {{decisionDate}} by the french administration of foreigners"
 			},
