correctif mail sejour tmp

--- a/src/main/resources/i18n/messages_fr.properties
+++ b/src/main/resources/i18n/messages_fr.properties
@@ -15,7 +15,9 @@ email.payment.greeting=Bonjour {0} {1},
 email.payment.done.sejour_etudiant=Nous accusons r\u00e9ception de votre demande de s\u00e9jour \u00e9tudiant, n\u00B0{0}, d\u00e9pos\u00e9e et r\u00e9gl\u00e9e en ligne le {1} \u00e0 {2}.
 email.payment.done.sejour_tmp_etudiant=Nous accusons r\u00e9ception de votre demande de carte de s\u00e9jour temporaire \u00e9tudiant, n\u00B0{0}, d\u00e9pos\u00e9e et r\u00e9gl\u00e9e en ligne le {1} \u00e0 {2}.
 email.payment.done.naturalisation=Nous accusons r\u00e9ception de votre demande de naturalisation, n\u00B0{0}, d\u00e9pos\u00e9e et r\u00e9gl\u00e9e en ligne le {1} \u00e0 {2}.
-email.payment.admissible=La recevabilit\u00e9 de votre dossier va \u00eatre v\u00e9rifi\u00e9e par l\u2019Administration des \u00e9trangers en France. Si votre dossier est recevable, nous vous enverrons une notification de confirmation vous invitant \u00e0 finaliser le d\u00e9p\u00f4t de votre demande.
+email.payment.admissible.sejour_etudiant=La recevabilit\u00e9 de votre dossier va \u00eatre v\u00e9rifi\u00e9e par l\u2019Administration des \u00e9trangers en France. Si votre dossier est recevable, nous vous enverrons une notification de confirmation vous invitant \u00e0 finaliser le d\u00e9p\u00f4t de votre demande.
+email.payment.admissible.sejour_tmp_etudiant=La recevabilit\u00e9 de votre dossier va \u00eatre v\u00e9rifi\u00e9e. Si votre dossier est recevable, nous vous enverrons une notification de confirmation vous invitant \u00e0 finaliser le d\u00e9p\u00f4t de votre demande.
+email.payment.admissible.naturalisation=La recevabilit\u00e9 de votre dossier va \u00eatre v\u00e9rifi\u00e9e par l\u2019Administration des \u00e9trangers en France. Si votre dossier est recevable, nous vous enverrons une notification de confirmation vous invitant \u00e0 finaliser le d\u00e9p\u00f4t de votre demande.
 email.payment.inadmissible=Si votre dossier n\u2019est pas recevable, nous vous en indiquerons les raisons et vous pr\u00e9ciserons le(s) \u00e9l\u00e9ment(s) manquant(s) le cas \u00e9ch\u00e9ant.
 
 email.admissibility.title=Validation de la recevabilit\u00e9 de votre demande
@@ -42,6 +44,9 @@ email.rdv.city.naturalisation=93007 Bobigny
 email.rdv.phone.sejour_etudiant=T\u00e9l  : (82-2) 3149 4300
 email.rdv.phone.sejour_tmp_etudiant=T\u00e9l  : +33 1 53 71 53 71
 email.rdv.phone.naturalisation=T\u00e9l  : +33 1 41 60 60 60
+email.rdv.schedule=Horaires :
+email.rdv.schedule.week=Du lundi au jeudi de 8h35 \u00e0 16h30
+email.rdv.schedule.weekend=Vendredi de 8h35 \u00e0 16h00
 email.rdv.delay=Vous pouvez modifier \u00e0 votre convenance votre cr\u00e9neau de rendez-vous dans un d\u00e9lai de 1 jour avant le rendez-vous confirm\u00e9. Pass\u00e9 ce d\u00e9lai, un justificatif vous sera demand\u00e9 pour modifier ou annuler votre rendez-vous. De m\u00eame, toute absence au rendez-vous devra \u00eatre justifi\u00e9e.
 email.rdv.modifiable=Pour modifier votre rendez-vous, cliquez sur le lien suivant :
 email.rdv.link=Modifier mon rendez-vous
@@ -81,9 +86,12 @@ email.renewal.end=Si vous ne souhaitez pas renouveler votre titre, nous esp\u00e
 
 email.regards=Cordialement,
 email.signature.sejour_etudiant=L\u2019\u00e9quipe S\u00e9jour.
-email.signature.sejour_tmp_etudiant=L\u2019\u00e9quipe S\u00e9jour.
+email.signature.sejour_tmp_etudiant=
 email.signature.naturalisation=L\u2019\u00e9quipe Naturalisation.
 email.signature.administration=Administration des Etrangers en France
+email.signature.administration.sejour_etudiant=Administration des Etrangers en France
+email.signature.administration.sejour_tmp_etudiant=La pr\u00e9fecture de Police de Paris
+email.signature.administration.naturalisation=Administration des Etrangers en France
 
 # Reset e-mail
 email.reset.title=sejour password reset
